# regatta-tracker-auth

./: .env.example  .gitignore  Dockerfile  auth-openapi.yaml  meson.build  rgt-auth.properties  startup.config
src/: Handlers.cpp  Handlers.h  Utils.cpp  Utils.h  main.cpp
src/app/: main.cpp
src/platform/: AuthFactory.cpp  AuthFactory.h  AuthServer.cpp  AuthServer.h  Utils.cpp  Utils.h
src/platform/Handlers/: ErrorHandler.h  LoginHandler.cpp  LoginHandler.h  RefreshHandler.cpp  RefreshHandler.h  RegisterHandler.cpp  RegisterHandler.h
src/platform/handlers/: ErrorHandler.h  LoginHandler.cpp  LoginHandler.h  RefreshHandler.cpp  RefreshHandler.h  RegisterHandler.cpp  RegisterHandler.h
tests/: Fixtures.h  LoginTests.cpp  ServerFixture.h  UtilsForTests.h  meson.build  tests.cpp
tests/login_tests/: Test1.cpp  Test2.cpp  Test3.cpp  Test4.cpp  Test5.cpp  Test6.cpp  Test7.cpp
